--- a/src/App.css
+++ b/src/App.css
@@ -6,3 +6,28 @@
     color: white;
     font-family: 'Poppins', sans-serif;
 }
+ /* Scroll bar */
+ ::-webkit-scrollbar {
+  width: 0.7rem;
+  height: 0.01rem;
+ }
+ 
+::-webkit-scrollbar-track {
+  border: 7px solid #232943;
+  box-shadow: inset 0 0 2.5px 2px rgba(0, 0, 0, 0.5);
+  border-radius: 2px;
+  }
+ 
+::-webkit-scrollbar-thumb {
+  background: #777;
+  border-radius: 2px;
+}
+ 
+::-webkit-scrollbar-thumb:hover {
+  background: #888;
+}
+ 
+/* for Firefox */
+ html {scrollbar-color: #9e4673 #3d4a59;} 
+
+ html {scroll-behavior: smooth;}
